kubernetes/music-store-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-store
  namespace: music-store
spec:
  selector:
    app: music-store
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
